# minichain

./: .gitignore  API.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  PLAN.md  Procfile  README.md  SMART_CONTRACTS.md  package.json  railpack.toml  render.yaml
.github/workflows/: cd.yaml  ci.yaml
contracts/: counter.asm
contracts/auction/: AUCTION_DESIGN.md  README.md  package.json
contracts/auction/src/: auction.asm
contracts/auction/test/: auction-client.ts  e2e.test.ts
contracts/erc20/: ERC20_DESIGN.md  README.md  erc20.asm  package.json  test.sh
contracts/erc20/src/: erc20.asm
contracts/erc20/test/: contract-client.ts  e2e.test.ts  test-utils.ts
crates/assembler/: Cargo.toml
crates/assembler/src/: compiler.rs  lexer.rs  lib.rs  parser.rs
crates/chain/: Cargo.toml
crates/chain/src/: blockchain.rs  executor.rs  lib.rs  mempool.rs
crates/cli/: Cargo.toml
crates/cli/src/: alias.rs  main.rs  repl.rs
crates/cli/src/commands/: account.rs  block.rs  call.rs  deploy.rs  explore.rs  init.rs  mod.rs  tx.rs
crates/consensus/: Cargo.toml
crates/consensus/src/: lib.rs  poa.rs  validator.rs
crates/core/: Cargo.toml
crates/core/src/: account.rs  block.rs  crypto.rs  hash.rs  lib.rs  merkle.rs  transaction.rs
crates/server/: .dockerignore  Cargo.toml  Dockerfile
crates/server/src/: api.rs  entrypoint.sh  main.rs
crates/storage/: Cargo.toml
crates/storage/src/: chain.rs  db.rs  lib.rs  state.rs
crates/vm/: Cargo.toml
crates/vm/src/: executor.rs  gas.rs  lib.rs  memory.rs  opcodes.rs  tracer.rs
crates/vm/tests/: auction_test.rs  vm_test.rs
docs/: DIAGRAM-SOLUTION.md  Dockerfile  EXTERNAL-DIAGRAM-WORKFLOW.md  README.md  astro.config.mjs  package.json
docs/src/assets/diagrams/: README.md  address-derivation.tex  build.sh  decision-tree.tex  ecc-timeline.tex  merkle-tree.tex
docs/src/content/docs/: index.mdx
docs/src/content/docs/appendix/: advanced-blockchain.mdx  auction-contract.mdx  elliptic-curves.mdx  instruction-set.mdx
docs/src/content/docs/intro/: overview.mdx  welcome.mdx
docs/src/content/docs/part1/: chapter1-core.mdx
docs/src/content/docs/part2/: chapter2-storage.md  chapter2-storage.mdx
docs/src/content/docs/part3/: chapter3-vm.md  chapter3-vm.mdx
docs/src/content/docs/part4/: chapter4-assembler.md  chapter4-assembler.mdx
docs/src/content/docs/part5/: chapter5-chain.md  chapter5-chain.mdx
docs/src/content/docs/part6/: chapter6-cli.md
docs/src/styles/: custom.css
minichain-web/: index.html  package-lock.json  package.json
minichain-web/src/: App.css  App.jsx  index.css
scripts/: test-deploy.sh
