[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Jayendra"]
license = "MIT"

[workspace.dependencies]
# Crypto
blake3 = "1.5"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"

# Storage
sled = "0.34"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# CLI
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"

# Utils
thiserror = "1.0"
anyhow = "1.0"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }

# Assembler
logos = "0.14"

# Tracing/logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Internal crates
minichain-core = { path = "crates/core" }
minichain-vm = { path = "crates/vm" }
minichain-storage = { path = "crates/storage" }
minichain-consensus = { path = "crates/consensus" }
minichain-chain = { path = "crates/chain" }
minichain-assembler = { path = "crates/assembler" }
