[package]
name = "minichain-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core blockchain primitives for minichain"

[dependencies]
blake3.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
serde.workspace = true
thiserror.workspace = true
hex.workspace = true
bincode.workspace = true

[dev-dependencies]
serde_json.workspace = true
