[package]
name = "minichain-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
minichain-core = { workspace = true }
minichain-chain = { workspace = true }
minichain-consensus = { workspace = true }
minichain-storage = { workspace = true }
minichain-assembler = { workspace = true }

axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
hex = "0.4"
clap = { version = "4.4", features = ["derive", "cargo"] }
tower-http = { version = "0.6", features = ["cors"] }
http = "1"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
bincode = "1.3"
