[package]
name = "minichain-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Persistent storage layer for minichain"

[dependencies]
minichain-core.workspace = true
sled.workspace = true
thiserror.workspace = true
serde.workspace = true
bincode.workspace = true
